# llm.c

dev/metal/: CMakeLists.txt  README.md  bw_layernorm.py  common.h  dram_loopback.cpp  layernorm_backward.cpp  layernorm_forward.cpp
dev/metal/kernels/layernorm_backward/: compute.cpp  reader_interleaved.cpp  writer_interleaved.cpp
dev/metal/kernels/layernorm_forward/: compute.cpp  reader_interleaved.cpp  writer_interleaved.cpp
dev/metal/kernels/loopback/dataflow/: reader_interleaved.cpp  writer_interleaved.cpp
